--- a/choreshare/pubspec.yaml
+++ b/choreshare/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path: ^1.8.0
   image_picker: ^1.1.1
   cupertino_icons: ^1.0.6
+  audioplayers: ^1.0.0
 
 dev_dependencies:
   flutter_test:
