--- a/choreshare/pubspec.yaml
+++ b/choreshare/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   path: ^1.8.0
   image_picker: ^1.1.1
   cupertino_icons: ^1.0.6
-  audioplayers: ^0.20.1
+  just_audio: ^0.9.18
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
