--- a/choreshare/pubspec.yaml
+++ b/choreshare/pubspec.yaml
@@ -59,6 +59,7 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+  path_provider: any
 flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
