--- a/choreshare/pubspec.yaml
+++ b/choreshare/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
      - assets/
+     - assets/background.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
